# serializer version: 1
# name: TestAttachSubtractions.test_multiple
  list([
    dict({
      'id': 'sub_1',
      'subtractions': list([
        dict({
          'id': 1,
          'name': 'foo',
        }),
        dict({
          'id': 2,
          'name': 'foo',
        }),
      ]),
    }),
    dict({
      'id': 'sub_2',
      'subtractions': list([
        dict({
          'id': 1,
          'name': 'foo',
        }),
      ]),
    }),
    dict({
      'id': 'sub_3',
      'subtractions': list([
      ]),
    }),
  ])
# ---
# name: TestAttachSubtractions.test_single
  dict({
    'id': 'sub_1',
    'subtractions': list([
      dict({
        'id': 1,
        'name': 'foo',
      }),
      dict({
        'id': 2,
        'name': 'foo',
      }),
    ]),
  })
# ---
